# model-training

./: .bandit  .gitignore  .mllint  .pylintrc  Dockerfile  README.md  data.dvc  dvc.yaml  pyproject.toml  report.md  requirements.txt  tests-report.xml  train_model.py
.dvc/: config
.github/workflows/: pull_requests.yml  release.yaml  update_badge.yml
output/: .gitignore
src/: evaluate_model.py  get_data.py  preprocess_data.py  train.py
tests/: test_data_slices.py  test_dataset.py  test_evaluate_model.py  test_get_data.py  test_mutamorphic.py  test_preprocess_data.py  test_train.py
