[tool.poetry]
name = "model-training"
version= "0.0.0"
description = "This is the model training package"
authors = [
    "Radek Kargul <r.kargul@student.tudelft.nl>",
    "Rohan Sobha <r.r.sobha@student.tudelft.nl>",
    "Konstantinos Andriopoulos <a.konstantinos@student.tudelft.nl>",
    "Andrei Ionescu <a.c.ionescu-1@student.tudelft.nl>"
]

repository = "https://github.com/remla23-team06/model-training"

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.5.4"
pandas = "^2.0.1"
nltk = "^3.8.1"
scikit-learn = "^1.2.2"
dslinter = "^2.0.9"

[tool.poetry.dev-dependencies]
dvc = "^2.58.1"
dvc-gdrive = "^2.19.2"
mllint = "^0.12.2"
pylint = "^2.12.2"
mypy = "^0.931"
black = "^23.3.0"
bandit = "^1.7.5"
pytest = "^7.3.1"

[tool.isort]
profile = "black"

[tool.black]
include = '\.pyi?$'

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.pylint]
ignore = ["tests"]

[tool.mllint.rules]
disabled = [
    "version-control/code/git",
    "dependency-management",
    "testing/pass",
    "testing/coverage"
]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"