[tool.poetry]
name = "model-training"
version= "0.0.0"
description = "This is the model training package"
authors = [
    "Radek Kargul <r.kargul@student.tudelft.nl>",
    "Rohan Sobha <r.r.sobha@student.tudelft.nl>",
    "Konstantinos Andriopoulos <a.konstantinos@student.tudelft.nl>",
    "Andrei Ionescu <a.c.ionescu-1@student.tudelft.nl>"
]

repository = "https://github.com/remla23-team06/model-training"

readme = "README.md"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple"
priority = "explicit"


[[tool.poetry.source]]
name = "PyPI"
priority = "default"

[tool.poetry.dependencies]
python = "^3.10"
remlaverlib = {version = "^3.0.0", source = "test"}
notebook = "^6.5.4"
nltk = "^3.8.1"
scikit-learn = "^1.2.2"
gdown = "^4.7.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.5"
black = "^23.3.0"
dslinter = "^2.0.9"
dvc = "^2.58.1"
dvc-gdrive = "^2.19.2"
mllint = "0.12.2"
mypy = "^0.931"
pandas = "^2.0.1"
pylint = "^2.12.2"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-lazy-fixture = "^0.6.3"

[tool.isort]
profile = "black"

[tool.black]
include = '\.pyi?$'

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.mllint.rules]
disabled = [
    "dependency-management",
#    "testing/pass"
]

[tool.mllint.testing]
report = "tests-report.xml"
targets = { minimum = 1, ratio = { tests = 1, other = 4 }}

[tool.mllint.testing.coverage]
report = "coverage.xml"
targets = { line = 80.0 } 

[tool.pytest.ini_options]
junit_suite_name = "tests-report.xml"
pythonpath = ["."]